--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,6 @@
 #Minecraft server properties
-#Mon Aug 04 01:06:33 UTC 2025
+#Mon Aug 04 01:16:52 UTC 2025
+spawn-protection=16
 max-tick-time=-1
 generator-settings=
 force-gamemode=false
