--- a/servidor_minecraft/config/globalgamerules.cfg
+++ b/servidor_minecraft/config/globalgamerules.cfg
@@ -50,7 +50,7 @@ gamerules {
     S:gameLoopFunction=-
 
     # Whether the player should keep items in their inventory after death
-    S:keepInventory=false
+    S:keepInventory=true
 
     # Whether to log admin commands to server log
     S:logAdminCommands=true
